--- a/lesson1/1.ipynb
+++ b/lesson1/1.ipynb
@@ -5,26 +5,180 @@
    "id": "3ef9b320",
    "metadata": {},
    "source": [
-    "### 1. 우리는 데이터를 어떻게 저장할까?\n",
+    "### 1. \"프로그래밍\"이란?\n",
     "\n",
     "프로그래밍은 스마트폰과 컴퓨터 등의 기계를 위한 프로그램을 만드는 걸 가리켜요.<br>\n",
     "여기서 프로그램이라 하면, 대표적으로 카카오톡, 유튜브, 여러분이 하는 게임과 같은 모든 스마트폰 앱이 프로그램에 해당되죠.<br>\n",
     "\n",
     "<div>\n",
-    "<img src=\"./res/image.png\" width=\"500\"/>\n",
-    "</div>\n"
+    "<img src=\"./res/1.png\" width=\"500\"/>\n",
+    "</div><br>\n",
+    "\n",
+    "위 이미지에 \"보이는 모든것\" 이 프로그램에 해당되요. 바탕화면도 프로그램이고, 누를 수 있는 앱 들도 다 프로그램이죠. <br>\n",
+    "프로그래밍은, 이 프로그램들을 만드는 걸 뜻해요."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3910087b",
+   "id": "212b8a2f",
    "metadata": {},
+   "source": [
+    "### 2. 우리는 정보(데이터)를 어떻게 저장할까? 📦\n",
+    "\n",
+    "그런데 한 번 생각해볼까요? 카카오톡에서 친구랑 대화할 때, 내 이름이나 친구 이름, 그리고 채팅 내용은 어디에 저장될까요? <br>\n",
+    "폰이나 컴퓨터는 이런 정보를 어떻게 기억하는 걸까요? <br>\n",
+    "<br>\n",
+    "프로그래밍은 이걸 \"변수\"로 해결합니다. \"변할 수 있는 수(정보)\"의 줄임말이죠. <br>\n",
+    "**변수는 쉽게 말하면 \"뭐든 넣을 수 있는 이름이 붙은 상자\" 와 같아요.** <br>\n",
+    "변수라는 개념은 생소하게 다가올 수도 있어요. 일단 변수 없이 간단한 게임을 만들면 어떤지 한번 볼까요? <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cf31c1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "철수의 체력: 100\n",
+      "공격을 받았어요!\n",
+      "철수의 체력: 85\n",
+      "회복 물약을 먹었어요!\n",
+      "철수의 체력: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"철수의 체력:\", 100)\n",
+    "print(\"공격을 받았어요!\")     # 공격을 얼마나 받았지?\n",
+    "print(\"철수의 체력:\", 85)    # 어? 100이었는데 85로 바뀌었네?\n",
+    "print(\"회복 물약을 먹었어요!\") # 얼마나 회복한거지?\n",
+    "print(\"철수의 체력:\", 100)   # 숫자를 매번 번거롭게 써야하나...?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9616d03",
+   "metadata": {},
+   "source": [
+    "위 코드의 예제에선, 철수가 공격을 받고 회복을 하는걸 보여주는데, 여기서 생각해 볼 점들은: <br>\n",
+    "1. 철수의 체력이 처음부터 100?\n",
+    "2. 공격을 얼마나 받은거지?\n",
+    "3. 회복물약으로 얼마나 회복한거지?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c64565a",
+   "metadata": {},
+   "source": [
+    "이와 같은 부분들이 의문점으로 남게되죠. <br>\n",
+    "만약 철수의 체력이 게임을 하면서 100번 바뀌게 된다면, 똑같이 100번 숫자를 써내려가야 하는 번거로움이 생겨요. <br>\n",
+    "파이썬(Python)을 배우면서, 우리는 \"변수\"를 활용해 어떤 일이 일어나고 있는가 더욱 확실하게 만들 수 있어요. <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34f67b08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "철수의 체력: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"철수\" # name, 이름\n",
+    "health = 100 # health, 체력\n",
+    "\n",
+    "print(name + \"의 체력:\", health)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94ae27ed",
+   "metadata": {},
+   "source": [
+    "위 코드에서 게임의 주인공 이름을 정해주고, 체력도 정해줬어요. <br>\n",
+    "`name` 과 `health` 가 여기서 \"변수\" 역할을 하고 있고, 이 변수들은 기호 = 을 이용해 만들 수 있어요. <br>\n",
+    "기호 = 입장에서, 오른쪽이 변수라는 상자에 넣고싶은 \"정보\"이고, 왼쪽이 정보를 담을 상자가 되는거에요. <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "832ee24c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 상자에 이름표 붙이고 물건 넣기\n",
+    "name = \"철수\"   # \"name\" 상자에 \"철수\" 저장\n",
+    "age = 15       # \"age\" 상자에 15 저장\n",
+    "score = 9500   # \"score\" 상자에 9500 저장"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6e9f57f",
+   "metadata": {},
+   "source": [
+    "이 변수라는 상자들을 직접 활용해 볼까요? 밑의 코드에서 밑줄을 지우고 자기가 쓰고싶은 내용으로 바꿔봅시다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5dfc86cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "___의 나이는  살입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = \"___\" # 여기에 이름을 넣어보자!\n",
+    "my_age = ___    # 여기에 나이를 넣어보자!\n",
+    "\n",
+    "print(my_name + \"의 나이는\", my_age, \"살입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050719fd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
